// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validation Results Component should default to not hiding validation messages when empty 1`] = `
<pf-validation-results
  hideIfEmpty="false"
  validationResultItemTypes={[Function Object]}
  validationResults={[Function Array]}
>
  <div
    class="table validation-results"
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            width="10%"
          >
            Type
          </th>
          <th>
            Message
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        <tr>
          <td
            colspan="100%"
          >
            <p>
              No Messages.
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</pf-validation-results>
`;

exports[`Validation Results Component should not show table when hide if empty is set 1`] = `
<pf-validation-results
  hideIfEmpty={[Function Boolean]}
  validationResultItemTypes={[Function Object]}
  validationResults={[Function Array]}
>
  
</pf-validation-results>
`;

exports[`Validation Results Component should show an empty grid message 1`] = `
<pf-validation-results
  hideIfEmpty="false"
  validationResultItemTypes={[Function Object]}
  validationResults={[Function Array]}
>
  <div
    class="table validation-results"
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            width="10%"
          >
            Type
          </th>
          <th>
            Message
          </th>
        </tr>
      </thead>
      <tbody>
        
        
        <tr>
          <td
            colspan="100%"
          >
            <p>
              No Messages.
            </p>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</pf-validation-results>
`;

exports[`Validation Results Component should show validation results 1`] = `
<pf-validation-results
  hideIfEmpty="false"
  validationResultItemTypes={[Function Object]}
  validationResults={[Function Array]}
>
  <div
    class="table validation-results"
  >
    <table
      class="table"
    >
      <thead>
        <tr>
          <th
            width="10%"
          >
            Type
          </th>
          <th>
            Message
          </th>
        </tr>
      </thead>
      <tbody>
        
        <tr>
          <td>
            
            <span>
              <fa-icon
                aria-hidden="true"
                class="text-success"
              />
            </span>
            
            
            
          </td>
          <td
            class="vertical-center"
          >
             success message 
          </td>
        </tr>
        <tr>
          <td>
            
            
            <span>
              <fa-icon
                aria-hidden="true"
                class="text-info"
                icon="info-circle"
              />
            </span>
            
            
          </td>
          <td
            class="vertical-center"
          >
             info message 
          </td>
        </tr>
        <tr>
          <td>
            
            
            
            <span>
              <fa-icon
                aria-hidden="true"
                class="text-warning"
                icon="exclamation-triangle"
              />
            </span>
            
          </td>
          <td
            class="vertical-center"
          >
             warning message 
          </td>
        </tr>
        <tr>
          <td>
            
            
            
            
            <span>
              <fa-icon
                aria-hidden="true"
                class="text-danger"
                icon="exclamation-circle"
              />
            </span>
          </td>
          <td
            class="vertical-center"
          >
             error message 
          </td>
        </tr>
        
      </tbody>
    </table>
  </div>
</pf-validation-results>
`;
